# zBassMusic

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  index.html  set-version.ps1  sonar-project.properties  vcpkg-configuration.json  vcpkg.json  version.rc.in
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  story.md
.github/scripts/: build-ctest-review.js
.github/workflows/: build.yml  cmake-build.yml  cmake-release.yml  mkdocs.yml  on-push.yml  release.yml
_externals/: BassMusic.d
cmake/: bass.cmake  gothic-api.cmake  union-api.cmake
configuration/: index.html
dependencies/bass/include/: bass.h
developer-guide/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
developer-guide/release/: index.html
developer-guide/style-guide/: index.html
docs/: mkdocs.yml  options.md  requirements.txt  scriptable-interface.md  transitions-effects.md
docs/docs/: index.md
docs/docs/developer-guide/: index.md
docs/docs/developer-guide/architecture/: index.md
docs/docs/developer-guide/contributing/: index.md
docs/docs/developer-guide/release/: index.md
docs/docs/developer-guide/style-guide/: index.md
docs/docs/reference/: index.md
docs/docs/reference/classes/: C_BassMusic_Theme.md  C_BassMusic_ThemeAudio.md  C_MUSICTHEME.md
docs/docs/reference/globals/: index.md
docs/docs/reference/options/: index.md
docs/docs/roadmap/: index.md
docs/docs/stylesheets/: extra.css
docs/docs/user-guide/: define-music.md  index.md
docs/docs/user-guide/concepts/: index.md
docs/docs/user-guide/debugging/: index.md
docs/docs/user-guide/getting-started/: cross-fading.md  crossfading.md  index.md  music-definition.md  plugin-loading.md
docs/docs/user-guide/scripting/: custom-scheduler.md  index.md
docs/docs/user-guide/theme-definition/: basstheme.md  cmusictheme.md  index.md
docs/docs/user-guide/transition-scheduler/: index.md  instant.md  jingle.md  on-beat.md
docs/docs/user-guide/transitions/: index.md  jingle.md  midi.md  timing.md
docs/site/: 404.html  index.html
docs/site/configuration/: index.html
docs/site/developer-guide/: index.html
docs/site/developer-guide/architecture/: index.html
docs/site/developer-guide/code-style/: index.html
docs/site/developer-guide/contributing/: index.html
docs/site/developer-guide/environment/: index.html
docs/site/reference/: index.html
docs/site/roadmap/: index.html
docs/site/search/: search_index.json
docs/site/stylesheets/: extra.css
docs/site/user-guide/: index.html
docs/site/user-guide/debugging/: index.html
docs/site/user-guide/define-music/: index.html
docs/site/user-guide/getting-started/: index.html
docs/site/user-guide/scripting/: index.html
docs/site/user-guide/transition-scheduler/: index.html
gothic-api/: LICENSE  README.md
gothic-api/ZenGin/: zGothicAPI.cpp  zGothicAPI.h
gothic-api/ZenGin/DirectX7/include/: d3dcaps.h  d3dtypes.h  ddraw.h
gothic-api/ZenGin/Gothic_II_Addon/: ClassDef.h  G2A.h  GlobalVariables.h  StaticsProperties.h
gothic-api/ZenGin/Gothic_II_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  (+186 more)
gothic-api/ZenGin/Gothic_II_Classic/: ClassDef.h  G2.h  GlobalVariables.h  StaticsProperties.h
gothic-api/ZenGin/Gothic_I_Addon/: ClassDef.h  G1A.h  GlobalVariables.h  StaticsProperties.h
gothic-api/ZenGin/Gothic_I_Classic/: ClassDef.h  G1.h  GlobalVariables.h  StaticsProperties.h
gothic-api/ZenGin/Gothic_UserAPI/: CGameManager.inl
gothic-userapi/: oCGame.inl  zCParser.inl
plugin/: CMakeLists.txt  version.rc.in
plugin/src/: Plugin.cpp  Plugin.hpp
plugin/src/Gothic/: CMusicSys_Bass.hpp  Externals.hpp  Globals.hpp  Hooks.hpp  Options.hpp
plugin/src/NH/: Bass.cpp  Bass.h  BassChannel.cpp  BassChannel.h  BassEventManager.cpp  BassEventManager.h  BassOptions.cpp  BassOptions.h  BassTransitionScheduler.cpp  BassTransitionScheduler.h  BassTypes.h  Logger.cpp  Logger.h  Union.cpp  Union.h
reference/: index.html
reference/classes/C_BassMusic_Theme/: index.html
reference/classes/C_BassMusic_ThemeAudio/: index.html
reference/classes/C_MUSICTHEME/: index.html
reference/globals/: index.html
reference/options/: index.html
roadmap/: index.html
search/: search_index.json
src/: BuildInfo.h.in  Plugin.cpp  Plugin.hpp
src/Gothic/: BassLoader.hpp  CMusicSys_Bass.hpp  Externals.hpp  Globals.hpp  Hooks.hpp  Options.hpp
src/NH/: Commons.h  Executor.cpp  Executor.h  HashString.h  Logger.cpp  Logger.h  ToString.h
src/NH/Bass/: BassAPI.cpp  BassAPI.h  Channel.cpp  Channel.h  Command.cpp  Command.h  CommonTypes.h  Engine.cpp  Engine.h  EngineCommands.cpp  EngineCommands.h  EventManager.cpp  EventManager.h  IChannel.h  IEngine.h  MidiFile.cpp  MidiFile.h  MusicManager.cpp  MusicManager.h  MusicTheme.cpp  MusicTheme.h  Options.cpp  Options.h  Transition.cpp  Transition.h  TransitionInfo.cpp  TransitionInfo.h  TransitionScheduler.cpp  TransitionScheduler.h
stylesheets/: extra.css
tests/: CMakeLists.txt
tests/src/: example.cpp
user-guide/: index.html
user-guide/concepts/: index.html
user-guide/debugging/: index.html
user-guide/getting-started/: index.html
user-guide/getting-started/cross-fading/: index.html
user-guide/getting-started/music-definition/: index.html
user-guide/getting-started/plugin-loading/: index.html
user-guide/scripting/: index.html
user-guide/scripting/custom-scheduler/: index.html
user-guide/theme-definition/: index.html
user-guide/theme-definition/basstheme/: index.html
user-guide/theme-definition/cmusictheme/: index.html
user-guide/transitions/: index.html
user-guide/transitions/jingle/: index.html
user-guide/transitions/midi/: index.html
user-guide/transitions/timing/: index.html
vdf/: script.vdfs  script.vdfs.in  vdf.cmake
(+624 files in other folders)
